--- a/src/components/PageNavigation/BlockyNav/BlockyNav.astro
+++ b/src/components/PageNavigation/BlockyNav/BlockyNav.astro
@@ -53,7 +53,7 @@ const pageLinks = links.map((link) =>
                                 title={link.href}
                                 href={link.href}
                                 class={
-                                    index === pageLinks.length - 1
+                                    index === pageLinks?.length - 1
                                         ? "blocky-nav__link blocky-nav__link--cta"
                                         : "blocky-nav__link"
                                 }
