--- a/src/components/Sections/Contact Sections/TwoColumnContact/TwoColumnContact.astro
+++ b/src/components/Sections/Contact Sections/TwoColumnContact/TwoColumnContact.astro
@@ -7,7 +7,7 @@ import TopRightAnimatedSvg from "@components/TopRightAnimatedSvg.astro";
 const {info, location } = Astro.props;
 ---
 
-<div class="two_column_contact container" id="contact-us" data-highlight="true">
+<div class="two_column_contact container" id="contact" data-highlight="true">
     <TopRightAnimatedSvg />
     <Container>
         <div class="two_column_contact__content">
