--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -143,6 +143,7 @@ const record = await getData();
 		title={record.title}
 		style={record.nav_style}
 		hero_style={record.hero_style}
+		country={record.country}
 		/>
 		<PageHero
 		image={record.expand.hero_image}
