--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,4 +1,15 @@
 :root {
+    --heading-4xl: 96px;
+    --heading-4xl-weight: 700;
+    
+    --heading-3xl: 72px;
+    --heading-3xl-weight: 700;
+    
+    --heading-2xl: 56px;
+    --heading-2xl-weight: 700;
+    
+    --heading-xl: 40px;
+    --heading-xl-weight: 700;
     --heading-large: 32px;
     --heading-large-weight: 700;
 
@@ -107,7 +118,7 @@
     :root {
         --container-padding-block: var(--size-9);
         --container-padding-inline: var(--size-4);
-        --content-max-width: 1100px;
+        --content-max-width: 1200px;
 
     }
 }
@@ -186,6 +197,10 @@ h1 {
 
 .content-grid>.full-width {
     grid-column: full-width;
+}
+
+.content-grid>.full-height {
+    grid-row: 1 / -1;
 }
 
 [data-highlight="true"] {
