--- a/src/components/Sections/CtaSection/CtaSection.astro
+++ b/src/components/Sections/CtaSection/CtaSection.astro
@@ -39,7 +39,7 @@ const { data } = Astro.props;
             </div>
 
             {
-                data.expand.image.length > 0 && (
+                data.expand.image?.length > 0 && (
                     <div class="cta__image" data-animate-on-scroll>
                         {data.expand.image.map((image: any) => (
                             <CustomImage image={image} classlist="content_section__image" size="large" eager={false} />
