--- a/src/components/Footer/TinyFooter/TinyFooter.astro
+++ b/src/components/Footer/TinyFooter/TinyFooter.astro
@@ -1,14 +1,19 @@
 ---
+import { translateFooterItem } from '@utils/translations';
+
 interface Props {
     title: string;
     designedBy: string;
     parent_site_url: string;
     rightsReserved: string;
+    country: string;
 }
 import Container from "@components/Container.astro";
 import "./tiny_footer.css";
 import { Image } from "astro:assets";
-const { title, designedBy, parent_site_url, rightsReserved } = Astro.props;
+const { title, designedBy, parent_site_url, rightsReserved, country } = Astro.props;
+const copyright = translateFooterItem('copyright', country);
+const designedByText = translateFooterItem('designed_by', country);
 ---
 
 <footer class="full-width footer">
@@ -16,7 +21,7 @@ const { title, designedBy, parent_site_url, rightsReserved } = Astro.props;
         <div class="footer__content">
             <p>
                 &copy; {new Date().getFullYear()}
-                {title.split("|")[0].trim()}. {rightsReserved}
+                {title.split("|")[0].trim()}. {copyright}
             </p>
             <p class="footer__logo">
                 <Image
@@ -29,12 +34,8 @@ const { title, designedBy, parent_site_url, rightsReserved } = Astro.props;
                     loading="lazy"
                     decoding="async"
                 />
-                <a
-                    href={parent_site_url}
-                    target="_blank"
-                    rel="noopener noreferrer"
-                >
-                    {designedBy}
+                <a href={parent_site_url} target="_blank" rel="noopener noreferrer">
+                    {designedByText} {designedBy}
                 </a>
             </p>
         </div>
