--- a/src/components/PageNavigation/StickyNav/StickyNav.astro
+++ b/src/components/PageNavigation/StickyNav/StickyNav.astro
@@ -3,6 +3,7 @@ import Container from "@components/Container.astro";
 import { Icon } from "astro-icon/components";
 import "./nav.css";
 import CustomImage from "@components/CustomImage.astro";
+import { translateNavItem } from '@utils/translations';
 interface Props {
     blackText: boolean;
     fixedMenu: boolean;
@@ -23,22 +24,13 @@ const {
     country
 } = Astro.props;
 
-const translatedLinks: Record<string, string> = {
-    home: "home",
-    about: "sobre",
-    services: "serviços",
-    products: "produtos", 
-    contact: "contato"
-};
-
-const translate = (link: string) => {
-    return translatedLinks[link] || link;
-};
-
 const pageLinks = links.map((link) =>
     link === "home"
-        ? { name: "Home", href: "/" }
-        : { name: translate(link), href: `#${link.split(" ").join("-")}` },
+        ? { name: translateNavItem("home", country), href: "/" }
+        : { 
+            name: translateNavItem(link, country), 
+            href: `#${link.split(" ").join("-")}` 
+          }
 );
 ---
 
